# landing-page_GJ

./: .gitignore  CNAME  Cargo.toml  README.md  index.html
.github/: copilot-instructions.md
.github/workflows/: deploy.yml
src/: lib.rs
src/components/: contact.rs  features.rs  footer.rs  header.rs  hero.rs  mod.rs  testimonials.rs
